namespace java com.moseeker.thrift.gen.dao.struct
namespace py thrift_gen.gen.dao.struct.hrdb


struct HrGroupCompanyRelDO {

	1: optional i32 id,	//null
	2: optional i32 companyId,	//公司ID
	3: optional i32 groupId,	//集团ID
	4: optional string createTime,	//null
	5: optional string updateTime	//null

}